--- a/face_detection/CMakeLists.txt
+++ b/face_detection/CMakeLists.txt
@@ -1,7 +1,12 @@
 cmake_minimum_required(VERSION 2.8)
+
 set( CMAKE_CXX_STANDARD 11)
+
 project( main )
+
+include( CTest )
 find_package( OpenCV REQUIRED )
 include_directories( ${OpenCV_INCLUDE_DIRS} )
 add_executable( main main.cpp )
 target_link_libraries( main ${OpenCV_LIBS} )
+add_test(test main)
