--- a/face_detection/CMakeLists.txt
+++ b/face_detection/CMakeLists.txt
@@ -1,12 +1,13 @@
 cmake_minimum_required(VERSION 2.8)
 
-set( CMAKE_CXX_STANDARD 11)
+set( CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++11 " )
+set( SOURCE_FILES test.cpp )
 
-project( main )
+project( test )
 
 include( CTest )
 find_package( OpenCV REQUIRED )
 include_directories( ${OpenCV_INCLUDE_DIRS} )
-add_executable( main main.cpp )
-target_link_libraries( main ${OpenCV_LIBS} )
+add_executable( test1 ${SOURCE_FILES} )
+target_link_libraries( test1 m ${OpenCV_LIBS} )
 add_test(test main)
