--- a/face_detection/CMakeLists.txt
+++ b/face_detection/CMakeLists.txt
@@ -1,7 +1,7 @@
 cmake_minimum_required(VERSION 2.8)
 
 set( CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++11 " )
-set( SOURCE_FILES test.cpp )
+set( SOURCE_FILES faceFeature_extr.cpp )
 
 project( test )
 
